# MusicalChairs

./: .gitignore  Cargo.toml  index.html  musical_cars.d.ts  musical_cars.js  musical_cars_bg.wasm.d.ts
.cargo/: config.toml
MusicalChairsLib/: Cargo.toml  pyproject.toml  train.py
MusicalChairsLib/src/: ai.rs  lib.rs  log.rs  python.rs
MusicalChairsLib/src/game/: collision.rs  game.rs  mod.rs
MusicalChairsLib/src/game/debug/: car_debug.rs  collision_debug.rs  mod.rs
MusicalChairsLib/src/game/map/: collision_data.rs  graphics.rs  graphics_map.rs  headless.rs  headless_map.rs  inbuilt_collision.rs  mod.rs
MusicalChairsLib/src/game/player/: graphics.rs  mod.rs  player.rs  player_car.rs
assets/levels/: basic.ldtk  simple.ldtk
src/: log.rs  main.rs
src/game/: car.rs  collision.rs  debug.rs  game.rs  map.rs  mod.rs
src/game/debug/: car_debug.rs  map_debug.rs  mod.rs
src/game/map/: headless_map.rs
src/game/player/: mod.rs  player.rs  player_graphics.rs
