[package]
name = "musical_cars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0" }
bevy_asset_loader = "0.14.1"
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dependencies.bevy_ecs_ldtk]
version = "0.5.0"
features = ["atlas"]