[tool.poetry]
name = "musical_cars_lib"
version = "0.1.0"
description = ""
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
enn-trainer = "^0.1.14"
entity-gym-rs = "^0.8.0"
maturin = "^0.13.0"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
features  = ["python"]
profile = "release"
